--- a/splash.css
+++ b/splash.css
@@ -26,6 +26,17 @@ body {
 button {
   width: 128px;
   height: 128px;
+  border-radius: 8px;
+  background: none;
+  border: 4px solid white;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  cursor: pointer;
+}
+
+button hr {
+  width: 80%;
 }
 
 img {
@@ -43,7 +54,6 @@ nav {
 nav p {
   font-size: 5em;
   color: white;
-  flex: 1;
   text-align: center;
 }
 
