--- a/splash.css
+++ b/splash.css
@@ -16,7 +16,7 @@ body {
   display: flex;
   flex-direction: column;
   margin: 0px;
-  height: 100vh;
+  min-height: 100vh;
   font-family: sans-serif;
   background: linear-gradient(white, red);
   background-repeat: no-repeat;
@@ -42,9 +42,20 @@ button hr {
   background-color: white;
 }
 
+hr {
+  width: 80%;
+}
+
 img {
   width: 128px;
   height: 128px;
+}
+
+#intro {
+  margin: 10%;
+  border: 8px solid black;
+  border-radius: 10px;
+  background: white;
 }
 
 nav {
