--- a/common.css
+++ b/common.css
@@ -75,3 +75,18 @@ section {
   transition-duration: 1s;
   padding-top: 20vh;
 }
+
+section > div {
+  border: 8px solid black;
+  background: white;
+  border-radius: 10px;
+  margin: 5% 10%;
+}
+
+section h1 {
+  font-size: 5em;
+}
+
+section p {
+  font-size: 3em;
+}
