--- a/common.css
+++ b/common.css
@@ -74,6 +74,7 @@ section {
   background: linear-gradient(white, red);
   transition-duration: 1s;
   padding-top: 20vh;
+  border: 4px solid black;
 }
 
 section > div {
