--- a/splash.css
+++ b/splash.css
@@ -1,5 +1,5 @@
 li {
-  font-size: large;
+  font-size: 2em;
   font-style: bold;
 }
 
@@ -8,6 +8,9 @@ li {
   border: 8px solid black;
   border-radius: 10px;
   background: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 #link_row_1 {
@@ -40,8 +43,9 @@ li {
 
 #splash h1 {
   font-size: 6em;
+  text-align: center;
 }
 
 #splash ul {
-  font-size: 4em;
+  padding: 10%;
 }
