--- a/client/splash/css/common.css
+++ b/client/splash/css/common.css
@@ -75,6 +75,9 @@ section {
   transition-duration: 1s;
   padding-top: 20vh;
   border: 4px solid black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 section > div {
