--- a/client/splash/css/common.css
+++ b/client/splash/css/common.css
@@ -1,13 +1,3 @@
-a {
-  background: black;
-  border-radius: 8px;
-  font-size: 5em;
-  color: white;
-  padding: 16px;
-  text-decoration: none;
-  text-align: center;
-}
-
 body {
   display: flex;
   flex-direction: column;
@@ -24,11 +14,23 @@ hr {
   width: 80%;
 }
 
+.link_button {
+  background: black;
+  border-radius: 8px;
+  font-size: 5em;
+  color: white;
+  padding: 16px;
+  text-decoration: none;
+  text-align: center;
+}
+
 nav {
   display: flex;
   justify-content: space-around;
   align-items: center;
   background: black;
+  height: 20vh;
+  min-height: 160px;
 }
 
 nav button {
@@ -55,7 +57,7 @@ nav img {
   height: 128px;
 }
 
-nav p {
+nav a {
   font-size: 5em;
   color: white;
   text-align: center;
@@ -83,7 +85,7 @@ section {
 section > div {
   border: 8px solid black;
   background: white;
-  border-radius: 10px;
+  border-radius: 20px;
   margin: 5% 5%;
   padding: 5%;
 }
