--- a/client/splash/css/common.css
+++ b/client/splash/css/common.css
@@ -61,9 +61,9 @@ nav {
 nav button {
   width: 128px;
   height: 128px;
-  border-radius: 8px;
+  border-radius: 20%;
   background: none;
-  border: 4px solid white;
+  border: 16px solid white;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -72,7 +72,7 @@ nav button {
 
 nav button hr {
   border: none;
-  height: 4px;
+  height: 8px;
   width: 80%;
   background-color: white;
 }
