--- a/client/splash/css/common.css
+++ b/client/splash/css/common.css
@@ -52,7 +52,7 @@ hr {
 
 nav {
   display: flex;
-  justify-content: space-around;
+  justify-content: flex-end;
   align-items: center;
   background: black;
   min-height: 160px;
@@ -61,6 +61,7 @@ nav {
 nav button {
   width: 128px;
   height: 128px;
+  margin: 16px;
   border-radius: 20%;
   background: none;
   border: 16px solid white;
@@ -80,9 +81,12 @@ nav button hr {
 nav img {
   width: 128px;
   height: 128px;
+  margin: 16px;
 }
 
 nav a {
+  display: block;
+  flex: 1;
   font-size: 5em;
   color: white;
   text-align: center;
@@ -93,13 +97,29 @@ nav span {
   text-decoration: underline;
 }
 
+nav ul {
+  position: absolute;
+  top: -100vh;
+  background: white;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  z-index: -1;
+  transition: 0.5s;
+}
+
+nav ul li {
+  margin: 0;
+  padding: 16px 10vw;
+}
+
 section {
   min-height: 100vh;
   width: 100vw;
   left: -110vw;
   position: absolute;
   background: linear-gradient(white, red);
-  transition-duration: 1s;
+  transition-duration: 0.5s;
   padding-top: 10vh;
   border: 4px solid black;
   display: flex;
