--- a/client/splash/css/animate.css
+++ b/client/splash/css/animate.css
@@ -37,7 +37,7 @@ a[href="#features"] {
   animation-duration: 1s, 1.5s;
 }
 
-li:hover {
+nav li:hover {
   background: rgb(192, 192, 192);
   transition: 0.5s;
 }
