--- a/client/splash/css/common.css
+++ b/client/splash/css/common.css
@@ -108,9 +108,12 @@ nav ul {
   transition: 0.5s;
 }
 
-nav ul li {
+nav ul li a {
   margin: 0;
   padding: 16px 10vw;
+  font-size: 2em;
+  color: black;
+  text-decoration: none;
 }
 
 section {
