--- a/client/splash/css/common.css
+++ b/client/splash/css/common.css
@@ -108,6 +108,11 @@ nav ul {
   transition: 0.5s;
 }
 
+nav ul li {
+  margin: 0;
+  padding: 16px 10vw;
+}
+
 nav ul li a {
   margin: 0;
   padding: 16px 10vw;
