--- a/client/splash/css/features.css
+++ b/client/splash/css/features.css
@@ -1,5 +1,8 @@
 #features h1 {
-  text-decoration: underline;
+  margin: 0;
+  background: black;
+  color: white;
+  padding: 16px;
 }
 
 #features ul {
