--- a/client/splash/css/splash.css
+++ b/client/splash/css/splash.css
@@ -38,7 +38,7 @@ li {
   flex-direction: column;
   justify-content: space-around;
   align-content: center;
-  background: linear-gradient(white, red);
+  background: linear-gradient(white 50%, red);
   background-repeat: no-repeat;
 }
 
