--- a/client/splash/css/common.css
+++ b/client/splash/css/common.css
@@ -130,7 +130,7 @@ section {
   width: 100vw;
   left: -110vw;
   position: absolute;
-  background: linear-gradient(white, red);
+  background: linear-gradient(white 50%, red);
   transition-duration: 0.5s;
   padding-top: 10vh;
   border: 4px solid black;
