--- a/client/splash/css/common.css
+++ b/client/splash/css/common.css
@@ -31,7 +31,7 @@ body {
   border-radius: 100%;
   text-decoration: none;
   color: rgba(128, 128, 128, 0.562);
-  padding: 16px;
+  padding: 8px 16px;
 }
 
 header {
