--- a/client/css/common.css
+++ b/client/css/common.css
@@ -13,6 +13,13 @@ body {
   margin: 5% 5%;
 }
 
+.bubble h1 {
+  padding: 16px;
+  background: black;
+  color: white;
+  margin: 0;
+}
+
 .bubble p {
   padding: 5%;
 }
