--- a/client/css/signup.css
+++ b/client/css/signup.css
@@ -14,12 +14,16 @@ form {
   padding: 32px;
 }
 
+h1 {
+  font-size: 5em;
+}
+
 label {
   font-weight: bold;
-  font-size: 5em;
+  font-size: 4em;
 }
 
 input {
   margin-bottom: 32px;
-  font-size: 4em;
+  font-size: 3em;
 }
