--- a/client/css/signup.css
+++ b/client/css/signup.css
@@ -20,6 +20,14 @@ label {
 }
 
 input {
+  margin-top: 16px;
   margin-bottom: 32px;
   font-size: 3em;
+  border: 2px solid black;
+  border-radius: 20px;
+  padding: 8px;
+}
+
+input:focus {
+  border: 8px solid black;
 }
