--- a/client/css/signup.css
+++ b/client/css/signup.css
@@ -19,6 +19,10 @@ label {
   font-size: 4em;
 }
 
+label[for="terms"] {
+  font-size: 2em;
+}
+
 input {
   margin-top: 16px;
   margin-bottom: 32px;
@@ -26,6 +30,15 @@ input {
   border: 2px solid black;
   border-radius: 20px;
   padding: 8px;
+}
+
+input[type="checkbox"] {
+  width: 32px;
+  height: 32px;
+}
+
+input[type="submit"] {
+  margin: 64px 20%;
 }
 
 input:focus {
