--- a/client/css/dashboard.css
+++ b/client/css/dashboard.css
@@ -1,6 +1,47 @@
+a[href="#bills"] {
+  background: black;
+}
+
+#calendar_container {
+  width: 80%;
+  height: 30vh;
+}
+
 #dashboard {
   background: linear-gradient(white 50%, red);
   flex: 1;
   display: flex;
   flex-direction: column;
+  align-items: center;
+}
+
+#dashboard > h1 {
+  width: 100%;
+  text-decoration: underline;
+}
+
+#next_due {
+  width: 80%;
+  height: 30vh;
+}
+
+#shortcut_links {
+  display: flex;
+  width: 100%;
+  height: 20vw;
+  justify-content: space-evenly;
+}
+
+#shortcut_links a {
+  display: flex;
+  flex-direction: column;
+  background: black;
+  width: 20vw;
+  height: 20vw;
+  color: white;
+  font-size: 2em;
+  text-decoration: none;
+  justify-content: flex-end;
+  align-items: center;
+  border-radius: 20px;
 }
