--- a/client/css/dashboard.css
+++ b/client/css/dashboard.css
@@ -1,7 +1,3 @@
-a[href="#bills"] {
-  background: black;
-}
-
 #calendar_container {
   width: 80%;
   height: 30vh;
@@ -13,6 +9,10 @@ a[href="#bills"] {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+#dashboard a[href="#bills"] {
+  background: black;
 }
 
 #dashboard > h1 {
