--- a/client/css/common.css
+++ b/client/css/common.css
@@ -1,7 +1,7 @@
 body {
   display: flex;
   flex-direction: column;
-  margin: 0px;
+  margin: 0;
   font-family: sans-serif;
   background: red;
 }
@@ -134,11 +134,11 @@ nav ul li a {
 
 section {
   min-height: 100vh;
-  width: 100vw;
-  left: -110vw;
+  width: 0vw;
+  overflow: hidden;
   position: absolute;
   background: linear-gradient(white 50%, red);
-  transition-duration: 0.5s;
+  transition-duration: 0.2s;
   padding-top: 10vh;
   border: 4px solid black;
   display: flex;
