--- a/client/css/bills.css
+++ b/client/css/bills.css
@@ -1,9 +1,60 @@
-section h1 {
+section > h1 {
     font-size: 3em;
     width: 100%;
     text-decoration: underline;
     margin-top: 100px;
+    padding-left: 5%;
   }
+
+
+#edit_bill_form {
+  text-align: center;
+  width: 80vw;
+  padding-bottom: 5%;
+}
+
+#edit_bill_form h2 {
+  font-size: 3em;
+}
+
+#edit_bill_form input {
+  font-size: 3em;
+  border: 4px solid black;
+  padding: 16px;
+  border-radius: 25px;
+  width: 30vw;
+}
+
+
+#edit_bill_form select {
+  font-size: 3em;
+  border: 4px solid black;
+  padding: 16px;
+  border-radius: 25px;
+  width: 30vw;
+}
+
+option {
+  font-size: large;
+}
+
+#new_bill_btn {
+  background: black;
+  width: 80vw;
+  padding: 0px;
+  border: 8px solid black;
+  border-radius: 25px;
+  margin-top: 5%;
+}
+
+#new_bill_btn h2 {
+  background: black;
+  padding: 16px;
+  color: white;
+  border-radius: 25px;
+  margin: 0px;
+  font-size: 3em;
+}
 
 .dropdown {
   background: black;
@@ -19,17 +70,16 @@ section h1 {
   color: white;
   border-radius: 25px;
   margin: 0px;
-  font-size: 2em;
+  font-size: 3em;
 }
 
-.dropdown .contents {
+.contents {
   background: white;
   border-radius: 25px;
-  margin-left: 8px;
-  margin-right: 8px;
+  margin-left: 2%;
+  margin-right: 2%;
   overflow: hidden;
   max-height: 0;
-  padding-left: 5%;
   transition: max-height 0.5s ease-out;
 }
 
@@ -37,3 +87,25 @@ section h1 {
   max-height: 50vh;
   transition: max-height 0.5s ease-out;
 }
+
+.contents h3 {
+  font-size: 3em;
+  text-decoration: underline;
+}
+
+.contents p {
+  font-size: 3em;
+}
+
+.contents button {
+  width: 40%;
+  margin: 5%;
+  margin-top: 10%;
+  font-size: 2em;
+  font-weight: bold;
+  padding: 5%;
+  background-color: black;
+  color: white;
+  border-radius: 25px;
+}
+
