--- a/client/css/common.css
+++ b/client/css/common.css
@@ -66,6 +66,7 @@ nav {
   align-items: center;
   background: black;
   min-height: 160px;
+  width: 100vw;
 }
 
 nav button {
@@ -130,6 +131,11 @@ nav ul li a {
   font-size: 5em;
   color: black;
   text-decoration: none;
+}
+
+.row {
+  display: flex;
+  justify-content: space-evenly;
 }
 
 section {
