--- a/client/css/dashboard.css
+++ b/client/css/dashboard.css
@@ -1,7 +1,52 @@
 #calendar_container {
   width: 80%;
-  height: 30vh;
 }
+
+#calendar_container h1 {
+  font-size: 3em;
+}
+
+#calendar {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 2%;
+}
+
+p.calendar_day {
+  padding: 2%;
+  font-size: 3em;
+  margin: 0;
+  width: 5vw;
+  text-align: center;
+  border-radius: 50px;
+}
+
+.due {
+  border: 4px solid black;
+}
+
+.paid {
+  border: 4px solid black;
+  background-color: black;
+  color: white;
+}
+
+.pastDue {
+  background-color: red;
+  color: white;
+}
+
+.confirm_paid_btn {
+  background-color: black;
+  border-radius: 25px;
+  padding: 0 5%;
+  color: white;
+  font-size: 2em;
+  height: 5%;
+  
+}
+
 
 #dashboard {
   background: linear-gradient(white 50%, var(--main-bg-color));
@@ -21,9 +66,23 @@
   text-decoration: underline;
 }
 
+.dueBill {
+  display: flex;
+  justify-content: space-between;
+  font-size: 3em;
+  padding: 5%;
+}
+
 #next_due {
   width: 80%;
-  height: 30vh;
+}
+
+#next_due h1 {
+  font-size: 3em;
+}
+
+#next_due p {
+  padding: 0;
 }
 
 #shortcut_links {
