- All pages functional with basic implementation.

--- a/client/css/common.css
+++ b/client/css/common.css
@@ -24,7 +24,7 @@
   bottom: 2%;
   right: 2%;
   font-size: 3em;
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.301);
   border: none;
   color: white;
   padding: 5% 10%;
