--- a/client/css/common.css
+++ b/client/css/common.css
@@ -207,14 +207,13 @@ nav ul li a {
 
 section {
   min-height: 100vh;
-  width: 0vw;
   overflow: hidden;
   position: absolute;
   background: linear-gradient(white 50%, var(--main-bg-color));
   transition-duration: 0.2s;
   padding-top: 10vh;
   border: 4px solid black;
-  display: flex;
+  display: none;
   flex-direction: column;
   align-items: center;
 }
