--- a/client/css/bills.css
+++ b/client/css/bills.css
@@ -1,10 +1,4 @@
-section > h1 {
-    font-size: 3em;
-    width: 100%;
-    text-decoration: underline;
-    margin-top: 100px;
-    padding-left: 5%;
-  }
+
 
 
 #edit_bill_form {
@@ -14,12 +8,12 @@ section > h1 {
 }
 
 #edit_bill_form h2 {
-  font-size: 3em;
+  font-size: 1rem;
   text-decoration: underline;
 }
 
 #edit_bill_form input {
-  font-size: 3em;
+  font-size: 1rem;
   border: 4px solid black;
   padding: 16px;
   border-radius: 25px;
@@ -28,7 +22,7 @@ section > h1 {
 
 
 #edit_bill_form select {
-  font-size: 3em;
+  font-size: 1rem;
   border: 4px solid black;
   padding: 16px;
   border-radius: 25px;
@@ -36,7 +30,7 @@ section > h1 {
 }
 
 option {
-  font-size: large;
+  font-size: 1rem;
 }
 
 #new_bill_btn {
@@ -54,7 +48,7 @@ option {
   color: white;
   border-radius: 25px;
   margin: 0px;
-  font-size: 3em;
+  font-size: 1rem;
 }
 
 #save_changes_btn {
@@ -65,7 +59,7 @@ option {
   border-radius: 25px;
   margin-top: 5%;
   color: white;
-  font-size: 5em;
+  font-size: 1rem;
 }
 
 .dropdown {
@@ -74,6 +68,7 @@ option {
   padding: 0px;
   border: 8px solid black;
   border-radius: 25px;
+  margin-top: 2%;
 }
 
 .dropdown h2 {
@@ -82,7 +77,7 @@ option {
   color: white;
   border-radius: 25px;
   margin: 0px;
-  font-size: 3em;
+  font-size: 1rem;
 }
 
 .contents {
@@ -101,19 +96,19 @@ option {
 }
 
 .contents h3 {
-  font-size: 3em;
+  font-size: 1rem;
   text-decoration: underline;
 }
 
 .contents p {
-  font-size: 3em;
+  font-size: 1rem;
 }
 
 .contents button {
   width: 40%;
   margin: 5%;
   margin-top: 10%;
-  font-size: 2em;
+  font-size: 1rem;
   font-weight: bold;
   padding: 5%;
   background-color: black;
