--- a/client/css/common.css
+++ b/client/css/common.css
@@ -26,7 +26,7 @@
   position: fixed;
   bottom: 2%;
   right: 2%;
-  font-size: 3em;
+  font-size: 1rem;
   background-color: rgba(0, 0, 0, 0.301);
   border: none;
   color: white;
@@ -34,11 +34,18 @@
   border-radius: 25px;
 }
 
+html {
+  height: 100%;
+  width: 100%;
+}
+
 body {
   display: flex;
   flex-direction: column;
   margin: 0;
   font-family: sans-serif;
+  width: 100%;
+  height: 100%;
   background: var(--main-bg-color);
 }
 
@@ -62,11 +69,11 @@ body {
 
 
 #confirmation_alert {
-  font-size: 2em;
+  font-size: 1rem;
 }
 
 #confirmation_alert button {
-  font-size: 5em;
+  font-size: 1rem;
   border: none;
   background-color: white;
   padding: 0 5%;
@@ -80,7 +87,7 @@ body {
 }
 
 #confirmation_alert p {
-  font-size: 2em;
+  font-size: 1rem;
   text-align: center;
 }
 
@@ -97,7 +104,7 @@ body {
 }
 
 .close a {
-  font-size: 4em;
+  font-size: 1rem;
   font-weight: bold;
   border: 24px solid rgba(128, 128, 128, 0.562);
   border-radius: 100%;
@@ -105,6 +112,8 @@ body {
   color: rgba(128, 128, 128, 0.562);
   padding: 8px 16px;
 }
+
+
 
 header {
   z-index: 1;
@@ -117,7 +126,7 @@ hr {
 .link_button {
   background: black;
   border-radius: 8px;
-  font-size: 5em;
+  font-size: 1rem;
   color: white;
   padding: 16px;
   text-decoration: none;
@@ -130,17 +139,16 @@ nav {
   justify-content: flex-end;
   align-items: center;
   background: black;
-  min-height: 160px;
   width: 100vw;
 }
 
 nav button {
-  width: 128px;
-  height: 128px;
-  margin: 16px;
+  width: 20vw;
+  height: 20vw;
+  margin: 2vw;
   border-radius: 20%;
   background: none;
-  border: 16px solid white;
+  border: 8px solid white;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -155,15 +163,15 @@ nav button hr {
 }
 
 nav img {
-  width: 128px;
-  height: 128px;
-  margin: 16px;
+  width: 20vw;
+  height: 20vw;
+  margin: 2vw;
 }
 
 nav a {
   display: block;
   flex: 1;
-  font-size: 5em;
+  font-size: 2rem;
   color: white;
   text-align: center;
   text-decoration: underline;
@@ -195,7 +203,7 @@ nav ul li {
 nav ul li a {
   margin: 0;
   padding: 16px 10vw;
-  font-size: 5em;
+  font-size: 1rem;
   color: black;
   text-decoration: none;
 }
@@ -218,12 +226,16 @@ section {
   align-items: center;
 }
 
-section h1 {
-  font-size: 5em;
+section > h1 {
+  font-size: 2rem;
+  width: 100%;
+  text-decoration: underline;
+  margin-top: 100px;
+  padding-left: 5%;
 }
 
 section p {
-  font-size: 3em;
+  font-size: 1rem;
 }
 
 #toast {
@@ -232,7 +244,7 @@ section p {
   background-color: black;
   color: white;
   z-index: 1;
-  font-size: 3em;
+  font-size: 1rem;
   max-height: 0;
   overflow: hidden;
   transition-duration: .2s;
