--- a/client/css/common.css
+++ b/client/css/common.css
@@ -214,7 +214,7 @@ nav ul li a {
 }
 
 section {
-  min-height: 100vh;
+  min-height: 100%;
   overflow: hidden;
   position: absolute;
   background: linear-gradient(white 50%, var(--main-bg-color));
