--- a/client/css/common.css
+++ b/client/css/common.css
@@ -73,7 +73,7 @@ body {
 }
 
 #confirmation_alert button {
-  font-size: 1rem;
+  font-size: 3rem;
   border: none;
   background-color: white;
   padding: 0 5%;
@@ -187,23 +187,24 @@ nav span {
 nav ul {
   position: absolute;
   overflow: hidden;
-  top: 16vh;
+  top: 15vh;
+  right: 0;
   max-height: 0;
   background: white;
   list-style-type: none;
   margin: 0;
   padding: 0;
   z-index: -1;
-  transition: 0.5s;
+  transition: max-height 0.5s;
 }
 
 nav ul li {
   margin: 0;
+  padding: 5vw 10vw;
 }
 
 nav ul li a {
   margin: 0;
-  padding: 16px 10vw;
   font-size: 1rem;
   color: black;
   text-decoration: none;
@@ -220,7 +221,6 @@ section {
   position: absolute;
   background: linear-gradient(white 50%, var(--main-bg-color));
   transition-duration: 0.2s;
-  border: 4px solid black;
   display: none;
   flex-direction: column;
   justify-content: flex-start;
@@ -247,10 +247,9 @@ section p {
   font-size: 1rem;
   max-height: 0;
   overflow: hidden;
-  transition-duration: .2s;
 }
 
 #toast.active {
   max-height: 20vh;
-  transition-duration: .2s;
+  overflow: visible;
 }
