--- a/client/css/signup.css
+++ b/client/css/signup.css
@@ -1,48 +1,48 @@
 #signup_container {
   flex: 1;
-  background: linear-gradient(white 50%, red);
+  background: linear-gradient(white 50%, var(--main-bg-color));
   height: 100%;
 }
 
 form {
   display: flex;
   flex-direction: column;
-  padding: 32px;
+  margin: 10%;
 }
 
 h1 {
-  font-size: 5em;
+  font-size: 2rem;
 }
 
 label {
   font-weight: bold;
-  font-size: 4em;
+  font-size: 1em;
 }
 
 label[for="terms"] {
-  font-size: 2em;
+  font-size: 1em;
 }
 
 input {
   margin-top: 16px;
   margin-bottom: 32px;
-  font-size: 3em;
+  font-size: 1em;
   border: 2px solid black;
   border-radius: 20px;
   padding: 8px;
 }
 
 input[type="checkbox"] {
-  width: 32px;
-  height: 32px;
+  width: 1em;
+  height: 1em;
 }
 
 input[type="submit"] {
-  margin: 64px 20%;
+  margin: 10%;
   height: 10%;
   background: black;
   color: white;
-  font-size: 5em;
+  font-size: 2em;
 }
 
 input:focus {
