--- a/client/css/signup.css
+++ b/client/css/signup.css
@@ -15,6 +15,7 @@ h1 {
 }
 
 label {
+  margin-top: 5%;
   font-weight: bold;
   font-size: 1em;
 }
@@ -24,8 +25,6 @@ label[for="terms"] {
 }
 
 input {
-  margin-top: 16px;
-  margin-bottom: 32px;
   font-size: 1em;
   border: 2px solid black;
   border-radius: 20px;
@@ -47,4 +46,11 @@ input[type="submit"] {
 
 input:focus {
   border: 8px solid black;
+}
+
+form > p {
+  display: none;
+  margin: 0;
+  font-weight: bold;
+  color: red;
 }
