- added PlaceHolder.js

--- a/client/app/index.css
+++ b/client/app/index.css
@@ -30,7 +30,7 @@ body {
 .collapsible {
     max-height: 0;
     overflow: hidden;
-    transition: max-height 1s;
+    transition: max-height .5s;
 }
 
 .collapsible.active {
