--- a/client/app/index.css
+++ b/client/app/index.css
@@ -1,13 +1,14 @@
 #app {
     background-color: rgba(255, 255, 255, 0);
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    justify-content: space-around;
 }
 
 #app > h1 {
     width: 80%;
-    font-size: 7vw;
+    font-size: var(--xl-font-size);
 }
 
 #background {
@@ -35,6 +36,10 @@ body {
 
 .collapsible.active {
     max-height: 100vh;
+}
+
+.dollar::before {
+    content: '$';
 }
 
 html {
@@ -69,19 +74,20 @@ nav {
     display: flex;
     padding: 2%;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     position: relative;
 }
 
 nav img {
     width: 15vw;
+    max-width: 96px;
 }
 
 
 
 nav a.heading {
     display: block;
-    font-size: 10vw;
+    font-size: var(--mg-font-size);
     color: white;
     text-align: center;
     text-decoration: underline;
@@ -93,11 +99,12 @@ nav span {
 }
 
 .navDropdownBtn {
-    border: 1vw solid white;
+    border: min(1vw, 8px) solid white;
     border-radius: 15%;
-    font-size: 7vw;
-    min-width: 10vw;
-    padding: 0 2%;
+    font-size: var(--xl-font-size);
+    width: 10vw;
+    max-width: 96px;
+    padding: 0;
     color: white;
     background: black;
 }
@@ -110,7 +117,7 @@ nav span {
     align-items: center;
     top: 100%;
     right: 0;
-    font-size: 7vw;
+    font-size: var(--xl-font-size);
     padding: 0 16px;
     z-index: 1;
 }
@@ -127,8 +134,15 @@ nav span {
     --btn-primary-color: white;
     --btn-danger-bg-color: red;
 
+    --xxs-font-size: min(2vw, 16px);
+    --xs-font-size: min(3vw, 20px);
+    --sm-font-size: min(4vw, 24px);
+    --md-font-size: min(5vw, 28px);
+    --lg-font-size: min(6vw, 32px);
+    --xl-font-size: min(7vw, 36px);
+    --xxl-font-size: min(8vw, 40px);
+    --mg-font-size: min(10vw, 56px);
 
-    font-size: 12px;
 }
 
 .row {
